Fixed team members wrapping on mobile

--- a/source/stylesheets/components.scss
+++ b/source/stylesheets/components.scss
@@ -84,6 +84,10 @@
     margin-top: 0.5rem;
   }
 
+  &__title {
+    height: 40px;
+  }
+
   &__member {
     min-height: 20rem;
     padding-right: 1rem;
